# SMIQP

./: AUTHORS  INSTALL  LICENSE  Makefile.am  Makefile.in  README.md  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
ConicBundle/: Makefile  README  c_main.c  cxx_main.cxx  mat_main.cxx
ConicBundle/CBsources/: BaseConeOracle.hxx  BaseSDPOracle.hxx  BaseSOCOracle.hxx  CBSolver.cxx  CB_CSolver.cxx  CB_CSolver.hxx  CFunction.cxx  CFunction.hxx  LPfun.hxx  MatBSolver.hxx  MatCBSolver.cxx  MatCBSolver.hxx  MatConcavefun.cxx  MatConcavefun.hxx  MatConefun.cxx  MatConefun.hxx  MatFCBSolver.cxx  MatFCBSolver.hxx  MatLPBCfun.cxx  MatLPBCfun.hxx  MatLPfun.cxx  MatLPfun.hxx  MatNBSolver.cxx  MatNBSolver.hxx  MatSDPfun.cxx  MatSDPfun.hxx  MatSOCfun.cxx  MatSOCfun.hxx  Nbundle.cxx  Nbundle.hxx  Nfunproblem.cxx  Nfunproblem.hxx  Nproblem.hxx  Nsumproblem.cxx  Nsumproblem.hxx  SOCfun.hxx  bigmat.cxx  bigmat.hxx  bundle.cxx  bundle.hxx  (+48 more)
ConicBundle/Matrix/: chol.cxx  eigval.cxx  indexmat.cxx  indexmat.hxx  lanczos.hxx  lanczpol.cxx  lanczpol.hxx  ldl.cxx  matop.hxx  matrix.cxx  matrix.hxx  memarray.cxx  memarray.hxx  mymath.hxx  nnls.cxx  qr.cxx  sparsmat.cxx  sparsmat.hxx  sparssym.cxx  sparssym.hxx  symmat.cxx  symmat.hxx  trisolve.cxx
ConicBundle/Tools/: clock.hxx  gb_rand.hxx  heapsort.hxx
ConicBundle/include/: CBSolver.hxx  CBconfig.hxx  cb_cinterface.h
Csdp/: Makefile
Ipopt/: Makefile  config.status  configure  ipopt.pc  libtool
Ipopt/contrib/RInterface/src/: Makevars
Ipopt/contrib/sIPOPT/: Makefile
Ipopt/contrib/sIPOPT/AmplSolver/: Makefile
Ipopt/contrib/sIPOPT/examples/parametric_cpp/: Makefile
Ipopt/contrib/sIPOPT/examples/parametric_dsdp_cpp/: Makefile
Ipopt/contrib/sIPOPT/examples/redhess_cpp/: Makefile
Ipopt/contrib/sIPOPT/src/: Makefile
Ipopt/examples/Cpp_example/: Makefile
Ipopt/examples/ScalableProblems_java/: Makefile
Ipopt/examples/hs071_c/: Makefile
Ipopt/examples/hs071_cpp/: Makefile
Ipopt/examples/hs071_f/: Makefile
Ipopt/examples/hs071_java/: Makefile
Ipopt/src/Algorithm/: Makefile
Ipopt/src/Algorithm/Inexact/: Makefile
Ipopt/src/Algorithm/LinearSolvers/: IpLinearSolversRegOp.cpp  Makefile
Ipopt/src/Apps/: Makefile
Ipopt/src/Apps/AmplSolver/: Makefile
Ipopt/src/Common/: Makefile  config.h  config_ipopt.h
Ipopt/src/Interfaces/: IpTNLPAdapter.cpp  Makefile
Ipopt/src/LinAlg/: Makefile
Ipopt/src/LinAlg/TMatrices/: Makefile
Ipopt/src/contrib/CGPenalty/: Makefile
Ipopt/src/contrib/LinearSolverLoader/: Makefile
Ipopt/test/: Makefile  hs071_c  hs071_cpp  hs071_f  parametric_cpp  redhess_cpp  run_unitTests
Ipopt/tutorial/CodingExercise/C/1-skeleton/: Makefile
Ipopt/tutorial/CodingExercise/Cpp/3-solution/: Makefile
Ipopt/tutorial/CodingExercise/Fortran/1-skeleton/: Makefile
autom4te.cache/: output.4  requests  traces.1  traces.2  traces.3  traces.4
m4/: acinclude.m4
src/Alg/: Makefile.am  Makefile.in  config.h  config.h.in  param.smiqp  smiqp.c  stamp-h2
src/Declarations/: Makefile.am  Makefile.in  liste.c  liste.h  quad_prog.c  quad_prog.h  quicksort.c  quicksort.h  utilities.c  utilities.h
src/Interfaces/: Makefile.am  Makefile.in  in_out.c  in_out.h  parameters.c  parameters.h
src/Interfaces/Cplex/: Makefile.am  Makefile.in  boxqp_cplex.c  boxqp_cplex.h  local_sol_cplex.c  local_sol_cplex.h  miqcr_cplex.c  miqcr_cplex.h  obbt.c  obbt.h  sbb_boxqp_cplex.c  sbb_boxqp_cplex.h  sbb_miqcr_cplex.c  sbb_miqcr_cplex.h
src/Interfaces/Ipopt/: Makefile.am  Makefile.in  local_sol_ipopt.c  local_sol_ipopt.h  sbb_boxqp_ipopt.c  sbb_boxqp_ipopt.h  sbb_miqcr_ipopt.c  sbb_miqcr_ipopt.h
src/Interfaces/Scip/: Makefile.am  Makefile.in  boxqp_scip.c  boxqp_scip.h  local_sol_scip.c  local_sol_scip.h  miqcr_scip.c  miqcr_scip.h  sbb_boxqp_scip.c  sbb_boxqp_scip.h  sbb_miqcr_scip.c  sbb_miqcr_scip.h
src/SdpSolver/: Makefile.am  Makefile.in  solver_sdp.c  solver_sdp.h  solver_sdp_mixed.c  solver_sdp_mixed.h
